--- a/.ps_project/config.yaml
+++ b/.ps_project/config.yaml
@@ -3,15 +3,15 @@ version: 0
 type: "multi-grpc"
 ports: "5000"
 parameter-server:
-  container: "tensorflow/tensorflow:1.13.1-gpu-py3"
+  container: "tensorflow/tensorflow:1.13.1-py3"
   command: "python mnist.py"
-  machine-type: "K80"
+  machine-type: "G1"
   count: 1
 worker:
   container: "tensorflow/tensorflow:1.13.1-gpu-py3"
   command: "python mnist.py"
   machine-type: "K80"
-  count: 2
+  count: 3
 model:
   type: Tensorflow
   path: '/artifacts'
